incorrect parameter description #37715

Closed
opened 2013-12-06 09:35:40 +01:00 by Alexander N. · 6 comments
Member

mathutils.geometry.distance_point_to_plane
there is written

 mathutils.geometry.distance_point_to_plane(pt, plane_co, plane_no)

    Returns the signed distance between a point and a plane (negative when below the normal).
    Parameters:	

        pt (mathutils.Vector) – Point
        plane_co (mathutils.Vector) – First point of the quad
        plane_no (mathutils.Vector) – Second point of the quad

    Return type:	

    float

but it should be the same parameter description as further down at mathutils.geometry.intersect_line_plane

plane_co (mathutils.Vector) – A point on the plane
plane_no (mathutils.Vector) – The direction the plane is facing
[mathutils.geometry.distance_point_to_plane ](http://www.blender.org/documentation/blender_python_api_2_69_3/mathutils.geometry.html?highlight=intersect#mathutils.geometry.distance_point_to_plane) there is written ``` mathutils.geometry.distance_point_to_plane(pt, plane_co, plane_no) Returns the signed distance between a point and a plane (negative when below the normal). Parameters: pt (mathutils.Vector) – Point plane_co (mathutils.Vector) – First point of the quad plane_no (mathutils.Vector) – Second point of the quad Return type: float ``` but it should be the same parameter description as further down at [mathutils.geometry.intersect_line_plane ](http://www.blender.org/documentation/blender_python_api_2_69_3/mathutils.geometry.html?highlight=intersect#mathutils.geometry.intersect_line_plane) ``` plane_co (mathutils.Vector) – A point on the plane plane_no (mathutils.Vector) – The direction the plane is facing ```
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @beta-tester

Added subscriber: @beta-tester
Campbell Barton was assigned by Brecht Van Lommel 2013-12-06 14:29:05 +01:00

This issue was referenced by blender/blender-addons-contrib@2ef3f6159c

This issue was referenced by blender/blender-addons-contrib@2ef3f6159ca2ead6b8c0fbc3d83d8eb42f2f5974

This issue was referenced by blender/blender@2ef3f6159c

This issue was referenced by blender/blender@2ef3f6159ca2ead6b8c0fbc3d83d8eb42f2f5974

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit blender/blender@2ef3f6159c.

Closed by commit blender/blender@2ef3f6159c.
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender-addons#37715
No description provided.