Fix T37715: Incorrect docstring